# AudioDetour

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  load_all.bat  load_all_dbg.bat  reload_all.bat  unload_all.bat
include/: MMDetours.h  SimpleWidget.h  Utility.h  VTable.h
src/: CMakeLists.txt  MMDetours.cpp  SimpleWidget.cpp  SoundDetour.cpp  Utility.cpp  VTable.cpp
tests/: CMakeLists.txt  NanaTests.cpp
